[gd_scene load_steps=5 format=2]

[ext_resource path="res://scene/utility/health_pickup/health_pickup.gd" type="Script" id=1]

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 1, 0.407843, 0.407843, 1 )

[sub_resource type="CubeMesh" id=2]
material = SubResource( 7 )

[sub_resource type="BoxShape" id=5]

[node name="Health" type="Area"]
script = ExtResource( 1 )

[node name="Health_Kit" type="MeshInstance" parent="."]
transform = Transform( 0.6, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )
mesh = SubResource( 2 )
skeleton = NodePath("")

[node name="Shape_Kit" type="CollisionShape" parent="."]
shape = SubResource( 5 )

[connection signal="body_entered" from="." to="." method="_on_Health_body_entered"]
